hphp/test/zend/good/tests/classes/factory_and_singleton_003.php.expectf

Fatal error: Call to protected test::__construct() from invalid context in %s/factory_and_singleton_003.php on line 8
